apollo-router/src/plugins/cache/snapshots/uhg_custom_appollo_roouter__plugins__cache__tests__insert_with_nested_field_set-2.snap
---
source: apollo-router/src/plugins/cache/tests.rs
assertion_line: 533
expression: response.response.headers().get(CACHE_CONTROL)
---
Some(
    "public",
)
