apollo-router/src/plugins/cache/snapshots/uhg_custom_appollo_roouter__plugins__cache__tests__insert_with_nested_field_set.snap
---
source: apollo-router/src/plugins/cache/tests.rs
assertion_line: 531
expression: cache_keys
---
[
  {
    "key": "version:1.0:subgraph:products:type:Query:hash:bead1beb068f19990b462d5d7c17974a33b822f4b3439407a9f820ce1cb47de9:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c",
    "status": "new",
    "cache_control": "public"
  },
  {
    "key": "version:1.0:subgraph:users:type:User:entity:210e26346d676046faa9fb55d459273a43e5b5397a1a056f179a3521dc5643aa:representation:7cd02a08f4ea96f0affa123d5d3f56abca20e6014e060fe5594d210c00f64b27:hash:cfc5f467f767710804724ff6a05c3f63297328cd8283316adb25f5642e1439ad:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c",
    "status": "new",
    "cache_control": "public"
  }
]
